# livingroom-esphome-controller

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  livingRoomRTOS.ino  livingroom.yaml  livingroom_mock.yaml  secrets.example.yaml
.github/workflows/: core-ci.yml  yaml-sanity.yml
.venv-esphome-2025-9/: pyvenv.cfg
.venv-esphome2025/: pyvenv.cfg
.venv-esphome2025/Scripts/: activate  activate.bat
components/living_room/: __init__.py  living_room.cpp  living_room.h
components/living_room/core/: fan_controller.h  lift_controller.cpp  lift_controller.h  light_scene_engine.h
components/spi_clockless_led/: __init__.py  light.py  spi_clockless_led.cpp  spi_clockless_led.h
config/: hardware.yaml  pins.yaml
docs/: design-decisions.md  entity-map.md  feature-checklist.md  hardware-pinmap.md  home-assistant-install-raspi4.md  home-assistant-mock-setup.md  whole-room-modes.md  wiring-notes.md
home-assistant/: configuration-snippet.yaml  lovelace-livingroom-dashboard.yaml
home-assistant/dashboards/: livingroom.yaml
tests/: test_lift_controller.cpp
