cmake_minimum_required(VERSION 3.25)
project(livingroom_controller_core LANGUAGES CXX)
add_library(livingroom_core components/living_room/core/lift_controller.cpp)
target_include_directories(livingroom_core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/components)
target_compile_features(livingroom_core PUBLIC cxx_std_20)
target_compile_options(livingroom_core PRIVATE -Wall -Wextra -Wpedantic -Wconversion)
add_executable(test_lift_controller tests/test_lift_controller.cpp)
target_link_libraries(test_lift_controller PRIVATE livingroom_core)
enable_testing()
add_test(NAME lift_controller_smoke COMMAND test_lift_controller)
